@@ -1,5 +1,10 @@
 2007-07-27  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-themes.c: (themes_init): constify drag'n'drop data, remove
+	unused variable, use G_N_ELEMENTS where applicable
+
+2007-07-27  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-themes.c: (themes_init, theme_postinit): remove workarounds
 	for initialization problems in early versions of the capplet
 
